--- a/Cirrious.FluentLayout/Cirrious.FluentLayouts.Touch.csproj
+++ b/Cirrious.FluentLayout/Cirrious.FluentLayouts.Touch.csproj
@@ -11,6 +11,8 @@
     <RootNamespace>Cirrious.FluentLayouts.Touch</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Cirrious.FluentLayouts.Touch</AssemblyName>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,13 +37,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AdvancedFluentLayoutExtensions.cs" />
-    <Compile Include="FluentLayout.cs" />
     <Compile Include="FluentLayoutExtensions.cs" />
     <Compile Include="Margins.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RowSet-WorkInProgress\RowSet.cs" />
-    <Compile Include="UIViewAndLayoutAttribute.cs" />
-    <Compile Include="FluentLayoutGeneric.cs" />
+    <Compile Include="Touch\UIViewAndLayoutAttribute.cs" />
+    <Compile Include="Touch\UIViewExtensions.cs" />
+    <Compile Include="ViewAndLayoutAttribute.cs" />
+    <Compile Include="Touch\UIFluentLayout.cs" />
+    <Compile Include="FluentLayout.cs" />
+    <Compile Include="IFluentLayout.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
@@ -52,4 +57,7 @@
     <Reference Include="monotouch" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Touch\" />
+  </ItemGroup>
 </Project>
