--- a/Cirrious.FluentLayouts.Touch/Cirrious.FluentLayouts.Touch.csproj
+++ b/Cirrious.FluentLayouts.Touch/Cirrious.FluentLayouts.Touch.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{75D2DA9D-DFD4-49A1-98FB-FE0F0677EF0F}</ProjectGuid>
@@ -11,8 +11,6 @@
     <RootNamespace>Cirrious.FluentLayouts.Touch</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Cirrious.FluentLayouts.Touch</AssemblyName>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,17 +34,10 @@
     <MtouchLink>None</MtouchLink>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AdvancedFluentLayoutExtensions.cs" />
-    <Compile Include="FluentLayoutExtensions.cs" />
-    <Compile Include="Margins.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RowSet-WorkInProgress\RowSet.cs" />
-    <Compile Include="Touch\UIViewAndLayoutAttribute.cs" />
-    <Compile Include="Touch\UIViewExtensions.cs" />
-    <Compile Include="ViewAndLayoutAttribute.cs" />
-    <Compile Include="Touch\UIFluentLayout.cs" />
-    <Compile Include="FluentLayout.cs" />
-    <Compile Include="IFluentLayout.cs" />
+    <Compile Include="UIFluentLayout.cs" />
+    <Compile Include="UIViewAndLayoutAttribute.cs" />
+    <Compile Include="UIViewExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
@@ -58,6 +49,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="Touch\" />
+    <ProjectReference Include="..\Cirrious.FluentLayouts\Cirrious.FluentLayouts.csproj">
+      <Project>{5697A587-ACC0-4C2D-8C4A-6E49A89EA804}</Project>
+      <Name>Cirrious.FluentLayouts</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
