Move more code into the PCL. Move interface methods to extension methods.

--- a/Cirrious.FluentLayouts/Cirrious.FluentLayouts.csproj
+++ b/Cirrious.FluentLayouts/Cirrious.FluentLayouts.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Margins.cs" />
     <Compile Include="ViewAndLayoutAttribute.cs" />
     <Compile Include="RowSet-WorkInProgress\RowSet.cs" />
+    <Compile Include="IViewAndLayoutAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
