--- a/Cirrious.FluentLayouts/Cirrious.FluentLayouts.csproj
+++ b/Cirrious.FluentLayouts/Cirrious.FluentLayouts.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{5697A587-ACC0-4C2D-8C4A-6E49A89EA804}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Cirrious.FluentLayout</RootNamespace>
+    <RootNamespace>Cirrious.FluentLayouts</RootNamespace>
     <AssemblyName>Cirrious.FluentLayout</AssemblyName>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -36,7 +36,6 @@
     <Compile Include="FluentLayoutExtensions.cs" />
     <Compile Include="IFluentLayout.cs" />
     <Compile Include="Margins.cs" />
-    <Compile Include="ViewAndLayoutAttribute.cs" />
     <Compile Include="RowSet-WorkInProgress\RowSet.cs" />
     <Compile Include="IViewAndLayoutAttribute.cs" />
   </ItemGroup>
