--- a/FluentLayout.Cassowary/FluentLayout.Cassowary.csproj
+++ b/FluentLayout.Cassowary/FluentLayout.Cassowary.csproj
@@ -33,6 +33,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\View.cs" />
     <Compile Include="Test\ViewExtensions.cs" />
+    <Compile Include="FluentEngine.cs" />
+    <Compile Include="IViewEngine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
