--- a/FluentLayout.Android/FluentLayout.Android.csproj
+++ b/FluentLayout.Android/FluentLayout.Android.csproj
@@ -15,6 +15,7 @@
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <AssemblyName>FluentLayout.Android</AssemblyName>
     <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
+    <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +51,7 @@
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
@@ -58,17 +60,17 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Cirrious.FluentLayouts\Cirrious.FluentLayouts.csproj">
+    <ProjectReference Include="..\FluentLayout.Cassowary\FluentLayout.Cassowary.csproj">
+      <Project>{72BC634F-ABA5-4735-9B9E-A6701056258F}</Project>
+      <Name>FluentLayout.Cassowary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cirrious.FluentLayout\Cirrious.FluentLayouts\Cirrious.FluentLayouts.csproj">
       <Project>{5697A587-ACC0-4C2D-8C4A-6E49A89EA804}</Project>
       <Name>Cirrious.FluentLayouts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Cassowary.net\Cassowary.Pcl\Cassowary.Pcl.csproj">
-      <Project>{9B7E8B7B-B573-4124-8543-8EEDD3BE84EA}</Project>
+    <ProjectReference Include="..\Cassowary\Cassowary.Pcl\Cassowary.Pcl.csproj">
+      <Project>{5821E5B2-3621-4B74-AA19-A94DB5B9DE00}</Project>
       <Name>Cassowary.Pcl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FluentLayout.Cassowary\FluentLayout.Cassowary.csproj">
-      <Project>{0D519429-6590-468C-8B57-C1E7F1965833}</Project>
-      <Name>FluentLayout.Cassowary</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
