--- a/Cirrious.FluentLayouts/Cirrious.FluentLayouts.nuspec
+++ b/Cirrious.FluentLayouts/Cirrious.FluentLayouts.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>$id$</id>
     <version>0.1.0</version>
-    <title>Cirrious.FluentLayout</title>
+    <title>Cirrious.FluentLayouts</title>
     <authors>Stuart Lodge, Alexay Bogdanov, Daniel Münch</authors>
     <owners>Daniel Münch</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
