* Update Cassowary.Pcl to fix bugs related to edit variables.
* Don't use AutoSolve.

--- a/FluentLayout.Cassowary/FluentLayout.Cassowary.csproj
+++ b/FluentLayout.Cassowary/FluentLayout.Cassowary.csproj
@@ -40,7 +40,7 @@
   <ItemGroup />
   <ItemGroup>
     <Reference Include="Cassowary.Pcl">
-      <HintPath>..\packages\Cassowary.Pcl.1.0.0-CI00001\lib\portable-net45+win+wp80\Cassowary.Pcl.dll</HintPath>
+      <HintPath>..\..\packages\Cassowary.Pcl.1.0.0-CI00002\lib\portable-net45+win+wp80\Cassowary.Pcl.dll</HintPath>
     </Reference>
     <Reference Include="Cirrious.FluentLayout">
       <HintPath>..\packages\Cirrious.FluentLayout.1.0.0-CI00000\lib\portable-net45+win+wp80\Cirrious.FluentLayout.dll</HintPath>
