--- a/FluentLayout.Android/packages.config
+++ b/FluentLayout.Android/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Cassowary.Pcl" version="1.0.0-CI00001" targetFramework="MonoAndroid44" />
+  <package id="Cassowary.Pcl" version="1.0.0-CI00002" targetFramework="MonoAndroid50" />
   <package id="Cirrious.FluentLayout" version="1.0.0-CI00000" targetFramework="MonoAndroid44" />
 </packages>
