--- a/FluentLayout.Cassowary.Tests/packages.config
+++ b/FluentLayout.Cassowary.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cassowary.Pcl" version="1.0.0-CI00002" targetFramework="net45" />
   <package id="Cirrious.FluentLayout" version="1.0.0-CI00000" targetFramework="net45" />
 </packages>
