--- a/FluentLayout.Cassowary/FluentLayout.Cassowary.csproj
+++ b/FluentLayout.Cassowary/FluentLayout.Cassowary.csproj
@@ -41,7 +41,7 @@
       <HintPath>..\..\packages\Cassowary.Pcl.1.0.0-CI00002\lib\portable-net45+win+wp80\Cassowary.Pcl.dll</HintPath>
     </Reference>
     <Reference Include="Cirrious.FluentLayout">
-      <HintPath>..\packages\Cirrious.FluentLayout.1.0.0-CI00000\lib\portable-net45+win+wp80\Cirrious.FluentLayout.dll</HintPath>
+      <HintPath>..\..\packages\Cirrious.FluentLayout.1.0.0-CI00000\lib\portable-net45+win+wp80\Cirrious.FluentLayout.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
