--- a/FluentLayout.Android/FluentLayout.Android.csproj
+++ b/FluentLayout.Android/FluentLayout.Android.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="kiwi.net.droid">
+      <HintPath>..\..\packages\kiwi.net.droid.1.0.0\lib\monoandroid\kiwi.net.droid.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -52,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AndroidViewEngine.cs" />
     <Compile Include="FluentLayout.cs" />
+    <Compile Include="FluentEngineKiwi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
