--- a/FluentLayout.Android/packages.config
+++ b/FluentLayout.Android/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Cassowary.Pcl" version="1.0.0-CI00001" targetFramework="MonoAndroid44" />
   <package id="Cirrious.FluentLayout" version="1.0.0-CI00000" targetFramework="MonoAndroid50" />
+  <package id="kiwi.net.droid" version="1.0.0" targetFramework="MonoAndroid50" />
 </packages>
